version/0.3/_sources/api/ansys/heart/simulator/settings/settings/Purkinje.rst.txt




Purkinje
========

.. py:class:: Purkinje
   :canonical: ansys.heart.simulator.settings.settings.Purkinje



Bases: :py:obj:`Settings`


   Class for keeping track of purkinje settings.
















   ..
       !! processed by numpydoc !!












Overview
--------
.. py:currentmodule:: Purkinje
.. tab-set::





    .. tab-item:: Attributes

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~edgelen`
            - Edge length.
          * - :py:attr:`~ngen`
            - Number of generations.
          * - :py:attr:`~nbrinit`
            - Number of beams from origin point.
          * - :py:attr:`~nsplit`
            - Number of splits at each leaf.
          * - :py:attr:`~pmjtype`
            - Purkinje muscle junction type.
          * - :py:attr:`~pmjradius`
            - Purkinje muscle junction radius.
      




Import detail
-------------

.. code-block:: python

    from ansys.heart.simulator.settings.settings import Purkinje



Attribute detail
----------------
.. py:attribute:: edgelen
   :type: pint.Quantity
   :value: 0

   
   Edge length.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: ngen
   :type: pint.Quantity
   :value: 0

   
   Number of generations.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: nbrinit
   :type: pint.Quantity
   :value: 0

   
   Number of beams from origin point.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: nsplit
   :type: pint.Quantity
   :value: 0

   
   Number of splits at each leaf.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: pmjtype
   :type: pint.Quantity
   :value: 0

   
   Purkinje muscle junction type.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: pmjradius
   :type: pint.Quantity
   :value: 0

   
   Purkinje muscle junction radius.
















   ..
       !! processed by numpydoc !!



